--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "Gustavo Rossich",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.57.1"
-  },
-  "dependencies": {
+    "sass": "^1.57.1",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "autoprefixer": "^10.4.13",
-    "bootstrap": "^5.2.3",
     "postcss-cli": "^10.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3"
   }
 }
