--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss:assets/css",
-    "start": "server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "studi",
