--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prémier examen studi, Créer un site web avec HTML, CSS et Bootstrap",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch scss:assets/css",
+    "compile:sass": "sass --watch scss:public/assets/css",
     "start": "node server.js"
   },
   "keywords": [
